@@ -2,7 +2,7 @@ Package: GPArotation
 Title: GPA Factor Rotation
 Description:  Gradient Projection Algorithm Rotation for Factor Analysis. See ?GPArotation.Intro for more details.
 Depends: R (>= 2.0.0)
-Version: 2006.2-2
+Version: 2006.9-1
 LazyLoad: yes
 License: GPL Version 2. See the LICENSE file for details.
 Author: Coen Bernaards and Robert Jennrich
